test/invalid/OverrideErrors/SuperNotOverride.plume
/**
 * Super class to a semantically incorrect class, ChildNotOverride.plume
 * @author 35237, Marcos Vasco
 */
abstract class SuperNotOverride extends Object is
  
  abstract method calculate : (val : Boolean) -> Boolean